--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules/**/*
 .expo/*
+.expo-shared/*
 npm-debug.*
 *.jks
 *.p8
@@ -9,5 +10,10 @@ npm-debug.*
 *.orig.*
 web-build/
 uploads/
+web-build
+app.json
+babel.config.js
+debug.log
+
 # macOS
 .DS_Store
